user service and settings component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -529,6 +529,6 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
+<app-settings></app-settings>
 
 <router-outlet></router-outlet>
