--- a/src/app/plan-details/plan-details.component.html
+++ b/src/app/plan-details/plan-details.component.html
@@ -1,1 +1,15 @@
-<p>plan-details works!</p>
+<div class='card'>
+    <div class='card-header'>
+        PLAN SUMMARY
+    </div>
+
+    <div class='card-body'>
+        <div class='row'>{{mealPlan[0].calories}} CALORIES</div>
+        <div class='row'>
+            <div class='col'>{{mealPlan[0].carbs}}g carbs ({{mealPlan[0].carbs}}%)</div>
+            <div class='col'>{{mealPlan[0].carbs}}g protein ({{mealPlan[0].carbs}}%)</div>
+            <div class='col'>{{mealPlan[0].carbs}}g fat ({{mealPlan[0].carbs}}%)</div>
+
+        </div>
+    </div>
+</div>
