--- a/src/app/plan-summary/plan-summary.component.html
+++ b/src/app/plan-summary/plan-summary.component.html
@@ -17,9 +17,23 @@
         <div class='row'>
             <div class='col'>DAY TYPE:</div>
             <div class='col'>
-                <input type='range' min="1" max="4" value=1 [(ngModel)]='dayTypeId' (input)="onTextChanged()" />
+                <div class="btn-group btn-group-toggle" ngbRadioGroup name="daytype" [(ngModel)]="dayTypeId"
+                (change)="onTextChanged()">
+                <label ngbButtonLabel class="btn-primary">
+                  <input ngbButton type="radio" [value]="1" [checked]="true">Rest
+                </label>
+                <label ngbButtonLabel class="btn-primary">
+                  <input ngbButton type="radio" [value]="2">Light
+                </label>
+                <label ngbButtonLabel class="btn-primary">
+                  <input ngbButton type="radio" [value]="3">Moderate
+                </label>
+                <label ngbButtonLabel class="btn-primary">
+                  <input ngbButton type="radio" [value]="4">Hard
+                </label>
+              </div>
             </div>
         </div>
-        <div class='row'>rest - light - moderate - hard</div>
+
     </div>
 </div>
