--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -306,8 +306,11 @@
     </a> -->
 </div>
 
-<div class="content" role="main">
-  <span>welcome</span>
+<div class="jumbotron jumbotron-fluid" role="main">
+  <div class="container">
+    <h1 class="display-4">Welcome</h1>
+    <p class="lead">This is a description</p>
+  </div>
 </div>
 
 
