--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,4 +1,4 @@
-<div class='card shadow' style='max-width: 750px; margin: auto;'>
+<div class='card shadow custom-card'>
   <div class='card-header h4 header'>
     STEP 1 : Basic Information
   </div>
@@ -65,7 +65,7 @@
 
 <br />
 
-<div class='card shadow' style='max-width: 750px; margin: auto;'>
+<div class='card shadow custom-card'>
   <div class='card-header h4 header'>
     STEP 2 : Lifestyle
   </div>
@@ -112,7 +112,7 @@
 
 <br />
 
-<div class='card shadow' style='max-width: 750px; margin: auto;'>
+<div class='card shadow custom-card'>
   <div class='card-header h4 header'>
     STEP 3 : Plan Details
   </div>
