--- a/src/app/plan-details/plan-details.component.html
+++ b/src/app/plan-details/plan-details.component.html
@@ -1,16 +1,20 @@
-<div class='card'>
-    <div class='card-header'>
-        PLAN SUMMARY
+<div class='card shadow custom-card'>
+    <div class='card-header h4 header'>
+        Plan Details
     </div>
 
     <div class='card-body'>
         <div class='row' *ngFor='let meal of mealPlan'>
             <div class='col'>Meal: {{meal.name}}</div>
             <div class='col' *ngIf='meal.tag'>({{meal.tag}})</div>
-            <div class='col'>{{meal.calories}} CALORIES</div>
-            <div class='col'>{{meal.carbs}}g carbs ({{meal.carbs*400/meal.calories}}%)</div>
-            <div class='col'>{{meal.protein}}g protein ({{meal.protein*400/meal.calories}}%)</div>
-            <div class='col'>{{meal.fat}}g fat ({{meal.fat*900/meal.calories}}%)</div>
+            <div class='col'>{{meal.calories | number:'1.0-0'}} kcal</div>
+            <div class='col'>{{meal.carbs | number:'1.0-0'}}g carbs</div>
+            <div class='col'>{{meal.protein | number:'1.0-0'}}g protein</div>
+            <div class='col'>{{meal.fat | number:'1.0-0'}}g fat</div>
+            <!-- <div class='col'>{{meal.carbs}}g carbs ({{meal.carbs*400/meal.calories | number:'1.0-0'}}%)</div>
+            <div class='col'>{{meal.protein}}g protein ({{meal.protein*400/meal.calories | number:'1.0-0'}}%)</div>
+            <div class='col'>{{meal.fat}}g fat ({{meal.fat*900/meal.calories | number:'1.0-0'}}%)</div> -->
         </div>
     </div>
 </div>
+<br />
